--- a/exact.html
+++ b/exact.html
@@ -74,7 +74,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
           <br />
 
           <div align="center" class="container">
-            <img src="cliques.png" alt="Site Logo" class="logo" width="100px" />
+            <img src="graph.png" alt="Site Logo" class="logo" width="100px" />
           </div>
 
           <h1 style="font-size: 3rem" align="center">
@@ -92,7 +92,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
                 align-items: center;
               "
             >
-              li style="display: inline; margin: 0 10px">
+              <li style="display: inline; margin: 0 10px">
                 <a
                   href="/DAAWebpage/"
                   style="text-decoration: none; font-weight: semi-bold"
@@ -174,7 +174,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
 
         </ul>
         </p>
-        <p align = "center" class="algoText"></p>
+        <p align = "center" class="algoText"><
        Once it finds the minimum st-cut of this flow network, it checks if the cut S only contains the source vertex. If it does the upper bound is updated to α. 
        Otherwise, the lower bound is updated to α and the densest subgraph D is updated to be all vertices in S other than the source node. 
        This binary search algorithm terminated when the gap between the upper and lower bounds is less than 1 (n  (n -1)), where n is the number of vertices in the graph.
