feat: add dataset pages

--- a/datasets.html
+++ b/datasets.html
@@ -175,7 +175,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               <li style="display: inline; margin: 0 10px">|</li>
               <li style="display: inline; margin: 0 10px">
                 <a
-                  href="/DAAPage/caHepTh"
+                  href="/DAAPage/hepth"
                   style="text-decoration: none; font-weight: semi-bold"
                   >High Energy Physics (ca-HepTh)</a
                 >
