--- a/datasets.html
+++ b/datasets.html
@@ -158,7 +158,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
             >
               <li style="display: inline; margin: 0 10px">
                 <a
-                  href="/DAAPage/caida"
+                  href="/DAAWebpage/caida"
                   style="text-decoration: none; font-weight: semi-bold"
                   >CAIDA AS Relationships</a
                 >
@@ -167,7 +167,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               <li style="display: inline; margin: 0 10px">|</li>
               <li style="display: inline; margin: 0 10px">
                 <a
-                  href="/DAAPage/as733"
+                  href="/DAAWebpage/as733"
                   style="text-decoration: none; font-weight: semi-bold"
                   >Autonomous Systems AS-733</a
                 >
@@ -175,7 +175,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               <li style="display: inline; margin: 0 10px">|</li>
               <li style="display: inline; margin: 0 10px">
                 <a
-                  href="/DAAPage/hepth"
+                  href="/DAAWebpage/hepth"
                   style="text-decoration: none; font-weight: semi-bold"
                   >High Energy Physics (ca-HepTh)</a
                 >
@@ -183,7 +183,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               <li style="display: inline; margin: 0 10px">|</li>
               <li style="display: inline; margin: 0 10px">
                 <a
-                  href="/DAAPage/netscience"
+                  href="/DAAWebpage/netscience"
                   style="text-decoration: none; font-weight: semi-bold"
                   >Netscience</a
                 >
