chore: delete old files

--- a/exact.html
+++ b/exact.html
@@ -585,7 +585,7 @@ int main(int argc, char* argv[]) {
   const datasets = ["AS-733", "ca-HepTh", "Netscience", "CAIDA AS"];
 
   // Different runtimes for each h
-  const runtimes_h3 = [13.40, 33.30, 2125.04];
+  const runtimes_h3 = [13.40, 33.30, 0.45, 2125.04];
   const runtimes_h4 = [18.19, 64.88, 1.32, 7795.12];
   const runtimes_h5 = [32.65, 744.83, 3.45];
 
