feat: add applications

--- a/index.html
+++ b/index.html
@@ -177,28 +177,26 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
           <br />
 
           <h1 align="center" id="applications-of-cliques">
-            Applications of Cliques
+            Applications of Densest Subgraph Discovery
           </h1>
 
           <ul align="center">
             <li>
-              Social Network : Maximal cliques can be used to identify
-              communities or groups in which all members are connected to each
-              other. It can further be used for friend recommendation systems or
-              user prefernce systems
+              Detecting communities in networks: In a network, dense subgraphs
+              often correspond to communities. Parts of the network where nodes
+              are more strongly connected than in the rest of the network tends
+              to signify the presence of a friend group, in social media.
             </li>
             <li>
-              Biological Applications: Proteins can be represented as nodes and
-              their interactions can be modelled in edges. In this case, finding
-              maximal cliques indicate the presence of a functional protein
-              complex
+              Keyword and Entity Extraction: In Natural Language Processing
+              (NLP), graphs can be used to represent co-occurrences between
+              words or entities. Therefore, finding a dense subgraph can be used
+              to identify the most important words/keywords in a large piece of
+              text.
             </li>
             <li>
-              Frequency Allocation in Wireless Communication: Wireless devices
-              can be represented as nodes and an edge is marked between the
-              nodes if the devices can interfere with each other. In this case,
-              finding maximal cliques can identify groups of devices for which
-              the same frequency should not be allocated.
+              Anomaly Detection: In cybersecurity, a sudden appearance of a
+              dense subgraph could be used to trace or indicate a cyber attack.
             </li>
           </ul>
         </div>
