chore: fix typo

--- a/as733.html
+++ b/as733.html
@@ -227,7 +227,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               For 4-cliques (h = 4), the densest subgraph has an h-clique
               density of 85.125, with 32 vertices and 2724 cliques. For
               5-cliques (h = 5), the densest subgraph has an h-clique density of
-              126.767, with 30 vertices and 3803 cliqes.
+              126.767, with 30 vertices and 3803 cliques.
             </p>
             <div id="densityChart" style="width: 600px; height: 400px"></div>
             <div id="vertexChart" style="width: 600px; height: 400px"></div>
