--- a/caida.html
+++ b/caida.html
@@ -225,7 +225,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               For 4-cliques (h = 4), the densest subgraph has an h-clique
               density of 405.333, with 60 vertices and 24320 cliques. For
               5-cliques (h = 5), the densest subgraph has an h-clique density of
-              942.837, with 49 vertices and 46199 cliqes.
+              942.837, with 49 vertices and 46199 cliques.
             </p>
             <div id="densityChart" style="width: 600px; height: 400px"></div>
             <div id="vertexChart" style="width: 600px; height: 400px"></div>
