--- a/hepth.html
+++ b/hepth.html
@@ -229,7 +229,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               4-cliques (h = 4), the densest subgraph has an h-clique density of
               1123.75, with 32 vertices and 35960 cliques. For 5-cliques (h =
               5), the densest subgraph has an h-clique density of 6293, with 32
-              vertices and 201376 cliqes.
+              vertices and 201376 cliques.
             </p>
             <div id="densityChart" style="width: 600px; height: 400px"></div>
             <div id="vertexChart" style="width: 600px; height: 400px"></div>
