--- a/netscience.html
+++ b/netscience.html
@@ -223,7 +223,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               4-cliques (h = 4), the densest subgraph has an h-clique density of
               242.25, with 20 vertices and 4845 cliques. For 5-cliques (h = 5),
               the densest subgraph has an h-clique density of 775.2, with 20
-              vertices and 15504 cliqes.
+              vertices and 15504 cliques.
             </p>
             <div id="densityChart" style="width: 600px; height: 400px"></div>
             <div id="vertexChart" style="width: 600px; height: 400px"></div>
